Fix some html errors and align feed buttons to the center

--- a/css/news.css
+++ b/css/news.css
@@ -11,7 +11,7 @@ div.add_parentfolder { position: relative; }
 #feeds { background: #fff; width: 19.7em; left: 12.5em; top: 3.7em; bottom:3em; position: fixed; overflow: auto; padding: 0; margin: 0 0 0 0.3em;}
 
 li { padding: 0px !important; }
-li.feed { margin-left: 16px !important; text-align: right; border-radius: 5px; padding-left: 5px !important; background-color: rgb(255,255,255) !important; }
+li.feed { position: relative; margin-left: 16px !important; text-align: right; border-radius: 5px; padding-left: 5px !important; background-color: rgb(255,255,255) !important; }
 li.feed a { padding: 0 0 0 20px !important; overflow: hidden; text-overflow: ellipsis; text-align: left; width: 65%; }
 li#selected_feed { background-color: #FF9933 !important; }
 li.feed:hover { background-color: rgb(221, 221, 221) !important; }
@@ -21,15 +21,15 @@ li.collapsable_container:hover { color: rgb(0, 0, 0) !important; background-colo
 li.collapsable_container > ul { margin-bottom: 0.1em; }
 
 div.collapsable { position: relative; border-radius: 5px; }
-.collapsable_trigger { border: none ; margin: 0 0 0 5px; padding: 0; border-radius: 0; box-shadow: none; vertical-align: middle !important; background: url('%webroot%/core/img/places/folder.svg') no-repeat; height:16px; width:16px; }
+.collapsable_trigger { border: none ; margin: 0 0 0 5px; padding: 0; border-radius: 0; box-shadow: none; vertical-align: middle !important; background: url('%webroot%/core/img/places/folder.svg') no-repeat; opacity: 1; }
 .collapsable_title { padding-left: 0.2em; text-transform: uppercase; }
 div.collapsable:hover { background-color: rgb(221, 221, 221); }
 
-#feeds_delete { position: absolute; right: 0px; background: url('%webroot%/core/img/actions/delete.svg') no-repeat center; display: none; }
-#feeds_edit { position: absolute; right: 1.6em; background: url('%webroot%/core/img/actions/rename.svg') no-repeat center; display: none; }
+.feeds_delete { position: absolute; right: 0.1em; background: url('%webroot%/core/img/actions/delete.svg') no-repeat center; display: none; padding: 0; margin: -8px 0 0 0; top: 50%; }
+.feeds_edit { position: absolute; right: 1.6em; background: url('%webroot%/core/img/actions/rename.svg') no-repeat center; display: none; padding: 0; margin: -8px 0 0 0; top: 50%; }
 
-#unreaditemcounter.nonzero { position: relative; background: #5E5E5E; border-radius: 5px; padding: 0 5px; color: white; text-align: center; margin: 0 0.3em 0 0.3em;}
-#unreaditemcounter.zero { position: relative; margin: 0 0.3em 0 0; }
+.unreaditemcounter.nonzero { position: relative; background: #5E5E5E; border-radius: 5px; padding: 0 5px; color: white; text-align: center; margin: 0 0.3em 0 0.3em;}
+.unreaditemcounter.zero { position: relative; margin: 0 0.3em 0 0; }
 
 
 /* feed controls */
